# deciphon-cli

./: .env.example  .gitignore  Pipfile  README.md  example.sh  pyproject.toml  setup.cfg  setup.py
deciphon_cli/: __init__.py  _cli.py  console.py  core.py  data.py  errors.py  headers.py  main.py  requests.py  settings.py  upload.py
deciphon_cli/console/: db.py  env.py  hmm.py  job.py  prod.py  scan.py  sched.py  seq.py
deciphon_cli/resources/: .env.example
tests/: conftest.py  test_db.py  test_hmm.py  test_sched.py  test_version.py
