[tool.poetry]
name = "deciphon-cli"
version = "0.1.0"
description = "Deciphon command-line interface"

license = "MIT"

authors = ["Danilo Horta <danilo.horta@pm.me>"]

readme = "README.md"

repository = "https://github.com/EBI-Metagenomics/deciphon-cli"
homepage = "https://github.com/EBI-Metagenomics/deciphon-cli"

keywords = ["deciphon", "cli"]

classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
fasta-reader = "*"
pydantic = "*"
python = "^3.8"
python-decouple = "*"
requests = "*"
toml = "^0.9"
typer = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyright = "*"
pytest = "*"

[tool.poetry.scripts]
dcp = 'deciphon_cli.console:run'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
