[tool.poetry]
name = "deciphon-cli"
version = "0.1.0"
description = "Deciphon command-line interface"

license = "MIT"

authors = ["Danilo Horta <danilo.horta@pm.me>"]

readme = "README.md"

repository = "https://github.com/EBI-Metagenomics/deciphon-cli"
homepage = "https://github.com/EBI-Metagenomics/deciphon-cli"

keywords = ["deciphon", "cli"]

classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
fasta-reader = "*"
pooch = "*"
pydantic = { extras = ["dotenv"], version = "*" }
python = "^3.8"
requests = "*"
requests-toolbelt = "*"
tqdm = "*"
typer = "*"
xxhash = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyright = "*"
pytest = "*"

[tool.poetry.scripts]
dcp = 'deciphon_cli.main:app'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
