[metadata]
author = Danilo Horta
author_email = danilo.horta@pm.me
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
name = deciphon_cli
license = MIT
license_files = LICENSE
platforms = MacOS, Linux
description = CLI for Deciphon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EBI-Metagenomics/deciphon-cli
version = attr: deciphon_cli.__version__

[options]
packages = find:
